# Metodos_Gran_Escala2026

./: .gitignore  README.md
Tareas/Sales_predictions/: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
Tareas/Sales_predictions/notebooks/: 01_eda.ipynb  02_train.ipynb  03_xgboost_submission_v2.ipynb
Tareas/Sales_predictions/sagemaker/: Dockerfile.infer  Dockerfile.train  inference_handler.py  train_sagemaker.py
Tareas/Sales_predictions/scripts/: train.py
Tareas/Sales_predictions/src/inference/: Dockerfile  __main__.py
Tareas/Sales_predictions/src/preprocessing/: Dockerfile  __main__.py
Tareas/Sales_predictions/src/sales_predictions/: config.py  prep.py  train.py
Tareas/Sales_predictions/src/training/: Dockerfile  __main__.py
Tareas/tarea1_salespredictions/: main.py  pyproject.toml
Tareas/tarea1_salespredictions/Sales_predictions/: .gitignore
Tareas/tarea1_salespredictions/Sales_predictions/artifacts/: model.joblib
Tareas/tarea1_salespredictions/Sales_predictions/notebooks/: 03_xgboost.ipynb
Tareas/tarea1_salespredictions/Sales_predictions/scripts/: inference.py  prep.py
Tareas/tarea1_salespredictions/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Tareas/tarea1_salespredictions/catboost_info/learn/: events.out.tfevents
Tareas/tarea1_salespredictions/catboost_info/test/: events.out.tfevents
Tareas/tarea1_salespredictions/notebooks/: 01_eda.ipynb  02_train_submit.ipynb  03_xgboost_only_and_submission.ipynb
Tareas/tarea1_salespredictions/notebooks/notebooks_anotherform/: 01_EDA.ipynb  02_ventas_mensual.ipynb  04_baseline.ipynb  (+3 more)
Tareas/tarea1_salespredictions/src/: inference.py  prep.py  train.py
(+8 files in other folders)
